@@ -1,0 +1,5 @@
+INT(1,100,run) NEWLINE
+REP(run)
+	INT(1,100,n) SPACE INT(1,10,m) NEWLINE
+	ASSERT(n%m==0)
+END
